--- a/profile.html
+++ b/profile.html
@@ -26,14 +26,21 @@
     </div>
     <div class="bottom_wrapper">
         <div class="cont">
-            
+
         </div>
         <div class="footer">
-           <div class="sns">
-               <ul class="clearfy">
-                   <li><a href="#" target="_blank" title="트위터(공식)"></a><span class=""></span></li>
-               </ul>
-           </div>
+            <div class="sns">
+                <ul class="clearfy">
+                    <li><a href="#" target="_blank" title="트위터(공식)"></a><span class="">트위터공식</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">트위터멤버</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">v페북</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">인스타</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(방탄티비)</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(빅히트)</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">다음펜카</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">블로그</span></li>
+                </ul>
+            </div>
             <div class="copyright">
                 <p>
                     <span>Copyright</span>
@@ -62,5 +69,4 @@
             $(this).toggleClass("on");
         });
     </script>
-</body>
-</html>
+</body></html>
