--- a/album.html
+++ b/album.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="utf-8">
     <title>BTS | STpage</title>
@@ -26,14 +27,46 @@
     </div>
     <div class="bottom_wrapper">
         <div class="cont">
-
+            <div class="cont_nav"><span class="ir_pm">여백</span></div>
+            <div class="gallerylist">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="top">4th full-length album<p>map of the soul:7</p>
+                                </div>
+                                <img src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-7/img01.jpg">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="top">the 6th mini album<p>map of the soul:persona</p>
+                                </div>
+                                <img src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-persona/album-cover.jpg">
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="top">
+                                    repackage album<p>love yourself<br>結'ANSWER'</p>
+                                </div>
+                                <img src="https://ibighit.com/bts/images/bts/discography/love_yourself-answer/album-cover.jpg">
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="footer">
             <div class="sns">
                 <ul class="clearfy">
                     <li><a href="#" target="_blank" title="트위터(공식)"></a><span class="">트위터공식</span></li>
                     <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">트위터멤버</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">v페북</span></li>
+                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">페북</span></li>
                     <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">인스타</span></li>
                     <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(방탄티비)</span></li>
                     <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(빅히트)</span></li>
@@ -68,5 +101,8 @@
             $(".header .header_menu").slideToggle(200);
             $(this).toggleClass("on");
         });
+
     </script>
-</body></html>
+</body>
+
+</html>
