--- a/profile.html
+++ b/profile.html
@@ -5,9 +5,11 @@
     <title>BTS | STpage</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
+    <link
 </head>
 
 <body>
+   <script type="text/javascript" src="sc.js"></script>
     <div class="wrapper">
         <div class="header">
             <div class="header_logo">
@@ -25,21 +27,72 @@
         </div>
     </div>
     <div class="bottom_wrapper">
+
+
+        <!-- Contents -->
+
         <div class="cont">
 
+            <div class="cont_base">
+                <div class="member">
+                    <div class="snip1132">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/RM_for_Dispatch_%22Boy_With_Luv%22_MV_behind_the_scene_shooting%2C_15_March_2019_03.jpg">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member"></div>
+                <div class="member"></div>
+                <div class="member"></div>
+                <div class="member"></div>
+                <div class="member"></div>
+                <div class="member"></div>
+            </div>
         </div>
+
+        <!--footer-->
         <div class="footer">
             <div class="sns">
                 <ul class="clearfy">
-                    <li><a href="#" target="_blank" title="트위터(공식)"></a><span class="">트위터공식</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">트위터멤버</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">v페북</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">인스타</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(방탄티비)</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(빅히트)</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">다음펜카</span></li>
-                    <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">블로그</span></li>
+
+                    <li id="icon_circle">
+                        <span class="ir_pm">트위터공식</span>
+                        <a class="twit" href="https://twitter.com/BTS_bighit" target="_blank" title="트위터(공식)"></a></li>
+
+                    <li id="icon_circle2">
+                        <span class="ir_pm">트위터멤버</span>
+                        <a class="twit" href="#" target="_blank" title="트위터(멤버)"></a></li>
+
+                    <li id="icon_circle"><a class="facebook" href="#" target="_blank" title="페이스북"></a><span class="ir_pm">v페북</span></li>
+
+                    <li id="icon_circle">
+                        <span class="ir_pm">인스타</span>
+                        <a class="instagram" href="#" target="_blank" title="인스타그램(공식)"></a></li>
+
+                    <li id="icon_circle">
+                        <span class="ir_pm">유튜브(방탄티비)</span>
+                        <a class="youtube" href="#" target="_blank" title="BANGTAN-TV(YouTube)"></a></li>
+
+                    <li id="icon_circle2">
+                        <span class="ir_pm">유튜브(빅히트)</span>
+                        <a class="youtube" href="#" target="_blank" title="BigHitEnt(YouTube)"></a></li>
+
+                    <li>
+                        <span class="">다음펜카페</span>
+                        <a href="#" target="_blank" title="팬카페"></a></li>
+
+                    <li>
+                        <span class="">블로그</span>
+                        <a href="#" target="_blank" title="Blog"></a></li>
+
+                    <li>
+                        <span class="">싸클</span>
+                        <a href="https://soundcloud.com/bangtan" target="_blank" title="SoundCloud"></a></li>
                 </ul>
+            </div>
+            <div class="family_site">
+                <div>
+                    <h3>seoultech</h3>
+                </div>
             </div>
             <div class="copyright">
                 <p>
@@ -50,7 +103,7 @@
                     <span>Entertainment</span>
                     <span>NO</span>
                     <span>Rights</span>
-                    <span>reserved</span>
+                    <span id="last">reserved</span>
                 </p>
             </div>
         </div>
