--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,10 @@
     <title>BTS | STpage</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
-    <link
 </head>
 
 <body>
-   <script type="text/javascript" src="sc.js"></script>
+
     <div class="wrapper">
         <div class="header">
             <div class="header_logo">
@@ -34,23 +33,53 @@
         <div class="cont">
 
             <div class="cont_base">
-                <div class="member">
+                <div class="member" id="RM">
                     <div class="snip1132">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/RM_for_Dispatch_%22Boy_With_Luv%22_MV_behind_the_scene_shooting%2C_15_March_2019_03.jpg">
+                        <img class="RM" src="https://post-phinf.pstatic.net/MjAxOTA1MjNfMjI0/MDAxNTU4NTcxNDMyODQ1.wcVLopbabYHorDy15m7p-D3WcHQRKjwYaZZdN7S37VEg.oexZ5-5QbnlHHWKyPXbPcp-bcok4oUSISwvkl3u1H5kg.PNG/image.png?type=w1200">
                         <a href="#"></a>
                     </div>
                 </div>
-                <div class="member"></div>
-                <div class="member"></div>
-                <div class="member"></div>
-                <div class="member"></div>
-                <div class="member"></div>
-                <div class="member"></div>
+                <div class="member" id="SG">
+                    <div class="snip1132 hover">
+                        <img class="SG" src="https://post-phinf.pstatic.net/MjAxOTA1MjhfNzAg/MDAxNTU5MDM0MDcyMjMy.N4LjmWlbyJUsFtxcdNAi6HrsArKe8lGImRSyUQLV0J8g.7mgkpn45Y_g-34iMexf1e4IfuiwkVMkjLqcZ2-Ho80Yg.PNG/20190524064406871980.png?type=w1200">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member" id="JH">
+                    <div class="snip1132">
+                        <img class="JH" src="https://image.ajunews.com/content/image/2019/05/27/20190527232518526458.png">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member" id="Jin">
+                    <div class="snip1132">
+                        <img class="Jin" src="https://post-phinf.pstatic.net/MjAxOTA1MjNfODUg/MDAxNTU4NTcxNzY5MjA2.QC8B6tDvdO9znhAuBvE31_wF_5XwH-ggTqN5ADMd4xAg.dAa2zFaoLuirIb-cuHelX6KNEojZsjM4u9uuubbA2PQg.PNG/image.png?type=w1200">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member" id="JK">
+                    <div class="snip1132">
+                        <img class="JK" src="https://post-phinf.pstatic.net/MjAxOTA2MDNfMTM0/MDAxNTU5NTI2NTA1MzAx.XuF-o4F5rOFNbEtixnlXY_IBnNneVX3YH4A9oSJd2hMg.Qra0-BJ0uZDfeYYDMkJ0TTavxAXvb2k5HMjjkXoM6AIg.PNG/20190531140947613198.png?type=w1200">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member" id="V">
+                    <div class="snip1132">
+                        <img class="V" src="https://lh3.googleusercontent.com/proxy/sEjcS2xmaWEcKgSrBfJsYH0e2hAnFYFBzPwR3uNDCivPENi6gFTcboarCPmF7MmdfRuXyITLQLrkCDphBe3gs5E82002lS-4QD7YiwOjF2cPGr1iCCbSyXiELSxk2rpFAF1qktsA5EpBZAaDr0c9Wc0Cac_qRg9Kyf9rAEmvEK89bzswKnDhMQoxryC0ZjgDbu62VL_51xN0zNPJd8JKaTr-hBMNMzivSacwgcHUAPI0YSNt0yTn2keeG-S8Ctad352t5iQWEYnWbGwIN8u50ajQpju5J7-7rU8W3gPwxO4lSDjNL44feoA476bpFqkjOFvAtm9AjKoV5h-ZHo6P6J2UVEdyyWR9jFGfJX4ONaW_qN35MUy51lblpPUzbyNnkS-sAEh0qI8frL7K61xKtSh0U4hpnAHxCjsFqWSgwo3rIWc1IR95xBn0gp22nv4ww4Vr0zXCaQz9BmvvKWv1P3ZJj1J3wu4HLWZObxV1ulB9p9dObIXjChkFb0anFGVjtN-n81ScNwUtsYfoGOo50hTuAvz-c0qMI2RYWA">
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="member" id="JM">
+                    <div class="snip1132">
+                        <img class="JM" src="https://www.goodmorningcc.com/news/photo/202002/226937_233582_1940.jpg">
+                        <a href="#"></a>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!--footer-->
-        <div class="footer">
+        <div class="footer profile-footer">
             <div class="sns">
                 <ul class="clearfy">
 
@@ -108,18 +137,7 @@
             </div>
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(".header .header_logo").click(function(e) {
-            e.preventDefault();
-            //$("#cont_nav").css("display","block");
-            //$("#cont_nav").show();
-            //$("#cont_nav").fadeIn();
-            //$("#cont_nav").slideDown();
-            //$("#cont_nav").toggle();
-            //$("#cont_nav").fadeToggle();
-            $(".header .header_menu").slideToggle(200);
-            $(this).toggleClass("on");
-        });
-    </script>
-</body></html>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="sc.js"></script>
+</body>
+</html>
