--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,6 @@
         <!-- Contents -->
 
         <div class="cont">
-
             <div class="cont_base">
                 <div class="member" id="RM">
                     <div class="snip1132">
@@ -65,7 +64,7 @@
                 </div>
                 <div class="member" id="V">
                     <div class="snip1132">
-                        <img class="V" src="https://lh3.googleusercontent.com/proxy/sEjcS2xmaWEcKgSrBfJsYH0e2hAnFYFBzPwR3uNDCivPENi6gFTcboarCPmF7MmdfRuXyITLQLrkCDphBe3gs5E82002lS-4QD7YiwOjF2cPGr1iCCbSyXiELSxk2rpFAF1qktsA5EpBZAaDr0c9Wc0Cac_qRg9Kyf9rAEmvEK89bzswKnDhMQoxryC0ZjgDbu62VL_51xN0zNPJd8JKaTr-hBMNMzivSacwgcHUAPI0YSNt0yTn2keeG-S8Ctad352t5iQWEYnWbGwIN8u50ajQpju5J7-7rU8W3gPwxO4lSDjNL44feoA476bpFqkjOFvAtm9AjKoV5h-ZHo6P6J2UVEdyyWR9jFGfJX4ONaW_qN35MUy51lblpPUzbyNnkS-sAEh0qI8frL7K61xKtSh0U4hpnAHxCjsFqWSgwo3rIWc1IR95xBn0gp22nv4ww4Vr0zXCaQz9BmvvKWv1P3ZJj1J3wu4HLWZObxV1ulB9p9dObIXjChkFb0anFGVjtN-n81ScNwUtsYfoGOo50hTuAvz-c0qMI2RYWA">
+                        <img class="V" src="https://post-phinf.pstatic.net/MjAxOTA1MzBfMTIy/MDAxNTU5MTgwNTU3OTUy.B3fYaf02c4giz9cXihZ2YHS4isH8wNcYHpSncEBnNUcg.aM3lFa1WeB6jPMETDd5xcYplwVSHRA2PfxTljdHYFLAg.PNG/20190529221149385234.png?type=w1200">
                         <a href="#"></a>
                     </div>
                 </div>
@@ -76,10 +75,16 @@
                     </div>
                 </div>
             </div>
+            <div class="RM-profile profile">
+                <div class="photo"></div>
+                <div class="ex"></div>
+                <div class="btn-close"></div>
+            </div>
+
         </div>
 
         <!--footer-->
-        <div class="footer profile-footer">
+        <div class="footer" id="profile">
             <div class="sns">
                 <ul class="clearfy">
 
@@ -139,5 +144,4 @@
     </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="sc.js"></script>
-</body>
-</html>
+</body></html>
