--- a/al.html
+++ b/al.html
@@ -1,130 +1,447 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>BTS</title>
+    <title></title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" type="album_main.css">
 </head>
 <style>
+    html,
     body {
-        background: #373B44;
-        /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #373B44, #4286f4, );
-        /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #373B44, #4286f4);
-        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        width: 100%;
+        height: 100%;
     }
 
-    .gallerylist {
-        background-color: white;
-        width: auto;
+    #icon_circle {
+        background-color: #999;
+        width: 32px;
+        height: 32px;
+        border-radius: 16px;
+        text-align: center;
+
+    }
+
+    #icon_circle2 {
+        background-color: rgb(100, 100, 100);
+        width: 32px;
+        height: 32px;
+        border-radius: 16px;
+        text-align: center;
+    }
+
+    .wrapper {
+        width: 100%;
+        position: fixed;
+        z-index: 10;
+        background: inherit;
+        height: 100%;
+    }
+
+    .bottom_wrapper {
+        width: 100%;
+        z-index: 5;
+        overflow: hidden;
+    }
+
+    /* header */
+    .header {
+        width: 100%;
+        min-width: 320px;
+        position: fixed;
         height: auto;
-        margin: 20px;
-        position: relative;
+        background: rgba(0, 0, 0, 0.2);
+        text-align: center;
+        z-index: 1001;
     }
 
-    ul {
-        font-size: 0;
-        position: relative;
-    }
-
-    ul>li {
+    .header .header_logo {
         display: inline-block;
-        width: 33%;
+        padding: 13px;
     }
 
-    ul>li>a {
-        display: block;
-        width: auto;
-        text-decoration: none;
-        margin: 10px;
+    .header .header_menu {
+        display: none;
     }
 
-    ul>li>a .screen {
+    .header .header_menu ol {
+        text-align: center;
+    }
+
+    .header .header_menu ol li {
+        display: inline-block;
+        color: rgb(235, 235, 235);
+        font-size: 23px;
+        text-transform: uppercase;
+        padding: 0px 10px 10px 10px;
+    }
+
+    /* content */
+    .cont {
+        width: 100%;
+        background: #1488CC;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to left, #2B32B2, #1488CC);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to left, #2B32B2, #1488CC);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        position:relative;
+    }
+
+    .cont .cont_nav {
+        height: 67px;
+    }
+
+    .cont .base{width:100%; height:100%; z-index:100; position:absolute; top:0; left:0;}
+    .cont .base .blue {
+        width: 100%;
+        height: 58%;
+    }
+
+    .cont .base .darkblue {
+        background: rgba(0, 0, 0, 0.4);
+        width: 100%;
+        height: 42%;
+    }
+
+    .cont .album {
+        z-index: 900;
+        padding-top: 100px;
+        margin: 0 auto;
+        width: 1000px;
+        height: auto;
         position: relative;
         overflow: hidden;
     }
 
-    ul>li>a .screen::after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, .8);
-        z-index: 1;
-        opacity: 0;
-        transition: all .35s;
+    .cont .album .photo {
+        float: left;
+        width: 50%;
+        height: 650px;
     }
 
-    ul>li>a:hover .screen::after {
-        opacity: 1;
-    }
-
-    ul>li>a .screen .top {
-        position: absolute;
-        bottom: 150%;
-        left: 0px;
-        z-index: 2;
-        text-align: center;
+    .cont .album .intro {
+        padding-top: 150px;
+        margin-left: 100px;
+        float: left;
+        width: 40%;
+        height: 500px;
         color: white;
+    }
+
+    .cont .album .intro .mini-intro {
+        color: #FFBB00;
+        text-align: center;
         font-size: 12px;
-        font-weight: 900;
-        transition: all .35s;
+        font-weight: bold;
     }
 
-    ul>li>a .screen .top p {
-        display: inline-block;
-        color: white;
-        font-size: 26px;
-        font-weight: 900;
+    .cont .album .intro .title-intro {
+        font-size: 40px;
+        font-weight: 1000;
         text-align: center;
     }
 
-    ul>li>a .screen img {
-        max-width: 100%;
-        height: auto;
+    .cont .album .intro .sub-intro {
+        font-size: 14px;
+        font-weight: 600;
     }
 
-    ul>li>a:hover .top {
-        bottom: 30%;
+    .cont .album .preview_title {
+        text-align: center;
+        color: #FFBB00;
+        font-weight: 1000;
+        font-size: 35px;
+    }
+
+    .cont .album .real_intro {
+        color: white;
+        font-size: 16px;
+        margin: auto;
+        width: 90%;
+    }
+
+    .cont .track {
+        padding-top: 100px;
+        z-index: 1000;
+        margin: 0 auto;
+        width: 1000px;
+        position: relative;
+        height: auto;
+        padding-bottom:200px;
+    }
+
+    .cont .track .album-image {
+        text-align: center;
+        width: 100%;
+        overflow: hidden;
+    }
+    .cont .track .album-image img{
+        width:100%;
+        height:auto;
+    }
+
+    .cont .track .tracklist {
+        position: relative;
+        padding-top: 100px;
+        margin: auto;
+        width: 100%;
+    }
+
+    ol {
+        counter-reset: item;
+        list-style-type: none;
+        color: #FFBB00;
+        
+    }
+
+    li {
+        display: block;
+        font-size: 15px;
+        font-weight: 600;
+
+    }
+
+    li::before {
+        content: counter(item)" ";
+        counter-increment: item;
+    }
+
+    li>span {
+
+        color: white;
+    }
+    
+    .cont .tracklist .track-title {
+        color: #FFBB00;
+        text-align: center;
+        font-size: 35px;
+        font-weight: 1000;
+    }
+
+    .cont .tracklist .track-body {
+        padding-top: 70px;
+        margin: auto;
+        padding-left: 200px;
+        width: 40%;
+        line-height: 30px;
+    }
+
+    .cont .time {
+        color: grey;
+        font-size: 12px;
+    }
+
+    .footer {
+        position: relative;
+        overflow: hidden;
+        display: table;
+        clear: both;
+        background: #272727;
+        width: 100%;
+        height: 7%;
+        z-index: 1000;
+    }
+
+    .footer>div {
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    .footer .sns {
+        line-height: 10px;
+        z-index: 1002;
+    }
+
+    .footer .sns .clearfy {
+        margin-left: 20px;
+    }
+
+    .footer .sns li {
+        float: left;
+        margin-right: 10px;
+        width: 32px;
+        height: 32px;
+        overflow: hidden;
+        transform: scale(0.8);
+    }
+
+    .footer .sns .twit {
+        background: url(/BTS/icon/icon.png);
+    }
+
+    .footer .sns .twit {
+        background: url(icon/icon.png);
+    }
+
+    .footer .sns .facebook {
+        background: url(icon/facebook.png)
+    }
+
+    .footer .sns .instagram {
+        background: url(icon/instagram.png);
+    }
+
+    .footer .sns .youtube {
+        background: url(icon/youtube.png);
+    }
+
+    .footer .sns li a {
+        z-index: 1003;
+        display: block;
+        background-color: rgba(0, 0, 0, 0.2);
+        width: 32px;
+        height: 32px;
+    }
+
+    .footer .sns li a:hover {
+        background-color: #fff;
+    }
+
+    .footer .sns li span {
+        color: #fff;
+        font-size: 1px;
+    }
+
+    .footer .copyright {
+        font-size: 10px;
+        font-family: 'Camber-M';
+        color: #6b6b6b;
+        text-align: right;
+        text-transform: uppercase;
+    }
+
+    .footer .copyright p span {
+        white-space: nowrap;
+    }
+
+    #last {
+        margin-right: 20px;
     }
 </style>
 
 <body>
-    <div class="gallerylist">
-        <ul>
-            <li>
-                <a href="">
-                    <div class="screen">
-                        <div class="top">4TH FULL-LENGTH ALBUM
-                            <p>MAP OF THE SOUL:7</p>
-                        </div>
-                        <img src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-7/img01.jpg">
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="screen">
-                        <div class="top">THE 6TH MINI ALBUM
-                            <p>MAP OF THE SOUL:PERSONA</p>
-                        </div>
-                        <img src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-persona/album-cover.jpg">
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="screen">
-                        <div class="top">REPACKAGE ALBUM
-                            <p>LOVE YOURSELF 結'ANSWER'</p>
-                        </div>
-                        <img src="https://ibighit.com/bts/images/bts/discography/love_yourself-answer/album-cover.jpg">
-                    </div>
-                </a>
-            </li>
-        </ul>
+    <div class="wrapper">
+        <div class="header">
+            <div class="header_logo">
+                <img src="https://www.ibighit.com/images/bts/logo.png" alt="BTS로고">
+            </div>
+            <div class="header_menu">
+                <ol>
+                    <li><a href="#">profile</a></li>
+                    <li><a href="#">discography</a></li>
+                    <li><a href="#">video</a></li>
+                    <li><a href="#">schedule</a></li>
+                    <li><a href="#">award</a></li>
+                </ol>
+            </div>
+        </div>
     </div>
+    <div class="bottom_wrapper">
+        <div class="cont">
+            <div class="base">
+                <div class="blue"></div>
+                <div class="darkblue"></div>
+            </div>
+            <div class="cont_nav"><span class="ir_pm">여백</span></div>
+            <div class="album">
+                <div class="photo">
+                    <img width="500" src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-7/img01.jpg">
+                </div>
+                <div class="intro">
+                    <p class="mini-intro">4TH FULL-LENGTH ALBUM</p>
+                    <p class="title-intro">MAP OF THE SOUL:7</p>
+                    <br><br>
+                    <p class="sub-intro">방탄소년단, 정규 4집 ‘MAP OF THE SOUL : 7' 발매!<br>
+                        ‘온전한 나'의 모습을 찾기 위한 방탄소년단의 솔직한 이야기</p>
+                </div>
+                <hr>
+                <p class="preview_title">ALBUM PREVIEW</p>
+                <hr><br><br>
+                <div class="real_intro">
+                    방탄소년단이 2월 21일 네 번째 정규 앨범 ‘MAP OF THE SOUL : 7'을 발매한다.<br><br>
+                    지난해 막을 연 MAP OF THE SOUL 시리즈는 자신의 진짜 모습을 찾기 위해 여정을 시작한 방탄소년단의 솔직한 이야기를 담고 있다. 그 첫 작품인 MAP OF THE SOUL : PERSONA에서 세상에 대한 관심과 사랑의 즐거움을 노래하며 세상에 보여지는 자신의 모습을 발견했다면, ‘MAP OF THE SOUL : 7'에서는 그동안 숨겨왔던 내면의 그림자를 마주하고 이 또한 자신의 일부로 인정하고자 한다.<br><br>
+                    ‘MAP OF THE SOUL : 7'은 7명 멤버이자 한 팀으로 모인 방탄소년단의 데뷔 후 7년을 돌아보게 한다. 지금의 자리에 오기까지 걸어온 길은 결코 순탄치 않았고, 글로벌 슈퍼스타로서 오롯이 견뎌내야 하는 부담감과 두려움이라는 특별한 시련도 있었다. 하지만 그 시련의 상처마저 자신의 진짜 모습 중 하나임을 알게 된 방탄소년단은 이제 ‘보여주고 싶은 나'와 ‘외면하고 싶은 나'를 모두 받아들이고 마침내 ‘온전한 나'를 찾은 자신들의 이야기를 전하려 한다.<br><br>
+
+                    ‘MAP OF THE SOUL : 7'으로 선보일 방탄소년단의 아티스트적 면모
+                    지난 1월, 선공개 곡 ‘Black Swan' 음원과 함께 선보인 아트 필름(Art Film performed by MN Dance Company)은 슬로베니아 현대무용팀인 엠엔 댄스 컴퍼니(MN Dance Company)와의 협업으로 만들어진 작품이다. 곡의 정서를 현대무용으로 재해석해, 고난과 역경을 딛고 탄생한 흑조(Black Swan)를 연상시키는 독창적인 안무가 전 세계를 사로잡았다.<br><br>
+                    미국 CBS ‘더 레이트 레이트 쇼 위드 제임스 코든(The Late Late Show with James Corden)'에서 처음 공개한 ‘Black Swan' 무대는 본 아트 필름을 연상케하는, 서정적이면서도 예술적 감성을 한층 끌어올린 퍼포먼스로 화제를 모았다.<br><br>
+                    뿐만 아니라, 방탄소년단은 영국 런던, 독일 베를린, 아르헨티나 부에노스아이레스, 미국 뉴욕, 대한민국 서울 등 전 세계 5개국 예술 작가들과 협업한 글로벌 현대미술 프로젝트 CONNECT, BTS를 통해 다양성의 긍정, 소통, 연결 등 자신들이 추구하는 철학을 현대미술로 확장시켰다. 현대미술, 현대무용 등 새로운 영역과 조우하며 순수예술과 대중예술을 이어온 방탄소년단은 이번 ‘MAP OF THE SOUL : 7'으로 한 단계 성장한 아티스트의 면모를 보여줄 예정이다.<br><br>
+                </div>
+            </div>
+            <div class="track">
+                <div class="album-image">
+                    <img src="https://ibighit.com/bts/images/bts/discography/map_of_the_soul-7/1cLXja7NqCCpwEqCgRUu2su3.jpg">
+                </div>
+                <div class="tracklist">
+                    <hr>
+                    <p class="track-title">TRACK LIST</p>
+                    <hr>
+                    <div class="track-body">
+                        <ol>
+                            <li><span> &nbsp;&nbsp;Intro : Persona <span class="time">2’54”</span></span></li>
+                            <li><span> &nbsp;&nbsp;작은 것들을 위한 시 (Boy With Luv) (Feat. Halsey) <span class="time">3’49”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Make It Right <span class="time">3’42”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Jamais Vu <span class="time">3’46”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Dionysus <span class="time">4’08”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Interlude : Shadow <span class="time">4’20”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Black Swan <span class="time">3’18”</span></span></li>
+                            <li><span> &nbsp;&nbsp;Filter <span class="time">3’00”</span></span></li>
+                            <li><span> &nbsp;&nbsp;시차 <span class="time">3’54”</span></span></li>
+                            <li><span> &nbsp;Louder than bombs <span class="time">3’37”</span></span></li>
+                            <li><span> &nbsp;11ON <span class="time">4’06”</span></span></li>
+                            <li><span> &nbsp;욱 (UGH!) <span class="time">3’45”</span></span></li>
+                            <li><span> &nbsp;00:00 (Zero O’Clock) <span class="time">4’10”</span></span></li>
+                            <li><span> &nbsp;Inner Child <span class="time">3’53”</span></span></li>
+                            <li><span> &nbsp;친구 <span class="time">3'19"</span></span></li>
+                            <li><span> &nbsp;Moon <span class="time">3'29"</span></span></li>
+                            <li><span> &nbsp;Respect <span class="time">3'58"</span></span></li>
+                            <li><span> &nbsp;We are Bulletproof:the Eternal <span class="time">4'22"</span></span></li>
+                            <li><span> &nbsp;Outro:Ego <span class="time">3'16"</span></span></li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="sns">
+            <ul class="clearfy">
+                <li><a href="#" target="_blank" title="트위터(공식)"></a><span class="">트위터공식</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">트위터멤버</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">페북</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">인스타</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(방탄티비)</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">유튜브(빅히트)</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">다음펜카</span></li>
+                <li><a href="#" target="_blank" title="트위터(멤버)"></a><span class="">블로그</span></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>
+                <span>Copyright</span>
+                <span>@</span>
+                <span>2020</span>
+                <span>SeoulTech</span>
+                <span>Entertainment</span>
+                <span>NO</span>
+                <span>Rights</span>
+                <span>reserved</span>
+            </p>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(".header .header_logo").click(function(e) {
+            e.preventDefault();
+            //$("#cont_nav").css("display","block");
+            //$("#cont_nav").show();
+            //$("#cont_nav").fadeIn();
+            //$("#cont_nav").slideDown();
+            //$("#cont_nav").toggle();
+            //$("#cont_nav").fadeToggle();
+            $(".header .header_menu").slideToggle(200);
+            $(this).toggleClass("on");
+        });
+    </script>
 </body></html>
