--- a/al.html
+++ b/al.html
@@ -92,31 +92,6 @@
         height: 67px;
     }
 
-    .cont .base {
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-
-    .cont .base .blue {
-        width: 100%;
-        height: 24.5%;
-    }
-
-    .cont .base .darkblue {
-        background: rgba(0, 0, 0, 0.2);
-        width: 100%;
-        height: 20%;
-    }
-
-    .cont .base .blue2 {
-        width: 100%;
-        height: 27.4%;
-    }
-
     .cont .base .darkblue2 {
         background: rgba(0, 0, 0, 0.2);
         width: 100%;
@@ -169,7 +144,7 @@
     }
     
     .cont .album .preview{
-        background: rgba(0,0,0,0.2); wid
+        background: rgba(0,0,0,0.2); 
     }
 
     .cont .album .preview .preview_title {
