--- a/base.html
+++ b/base.html
@@ -34,6 +34,8 @@
             <!--
             <div class="cont_nav"><div class="header_logo"><img src="https://www.ibighit.com/images/bts/logo.png" alt="BTS로고"></div></div>
             -->
+            <div style="width:80%; margin:10%;">
+                
         </div>
 
         <!--footer-->
