--- a/profile2.html
+++ b/profile2.html
@@ -114,6 +114,9 @@
                             </div>
                             <div class="profile-contents">
                                 <h3>진</h3>
+                                <p>생일:1992년12월4일</p>
+                                <p>맏형</p>
+                                <p>자칭 World Wide Handsome</p>
                             </div>
                             <button type="button" class="btn-close" title="프로필 닫기" onclick="closeProfile();"></button>
                         </li>
